--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             border-top: 1px solid blue;
             border-right: 1px solid red;
             position: relative;
+            overflow: auto;
             }
 
             .grid-container *:after { 
