Fix #6: Avoid erasing app title when clicking Clear button

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
             });
 
             function resetNote() {
-                document.querySelector("#title").innerHTML = ""; 
+                //document.querySelector("#title").innerHTML = ""; 
                 document.querySelector("#main").innerHTML = ""; 
                 document.querySelector("#cues").innerHTML = "";
-                document.querySelector("#summary").innerHTML = "";
+                //document.querySelector("#summary").innerHTML = "";
             }
 
             var saveInterval = window.setInterval(function () {
